--- a/前端/CSS学习笔记/CSS/3-选择器.md
+++ b/前端/CSS学习笔记/CSS/3-选择器.md
@@ -2,7 +2,15 @@
 
 ## 标签选择器(元素选择器)
 
-文档的标签就是最基本的选择器
+文档的**标签**就是最基本的选择器
+
+语法：
+
+```css
+标签名 { 属性名: 属性值;}
+```
+
+例子：
 
 ```css
 html {color:black;}
@@ -14,7 +22,15 @@ h2 {color:silver;}
 
 ## id选择器
 
-id选择器已'#'号开头
+id选择器以'**#**'号开头
+
+语法：
+
+```css
+#选择器名 {属性名 : 属性值;} 
+```
+
+例子：
 
 ```css
 #intro {font-weight:bold;}
@@ -26,13 +42,21 @@ id选择器已'#'号开头
 
 特性：只能在文档中出现一次
 
-​	   不能多个id选择器共用在一个id上
+	   不能多个id选择器共用在一个id上
 
 
 
 ## 类选择器
 
-类选择器以点号(.)开始
+类选择器以点号'**.**'开始
+
+语法：
+
+```css
+.选择器名 {属性名: 属性值;} 
+```
+
+例子：
 
 ```html
 <h1 class="important">
@@ -54,7 +78,7 @@ p.important {color:red;}
 
 ### 多类选择器
 
-在 HTML 中，一个 class 值中可能包含一个词列表，各个词之间用空格分隔。
+在 HTML 中，一个 class 属性值中可以是一个类选择器或者多个类选择器，多个类选择器用<u>空格</u>隔开
 
 ```html
 <style>
@@ -190,7 +214,7 @@ h1 + p {margin-top:50px;}
 语法：
 
 ```css
-selector : pseudo-class {property: value}
+选择器 : 伪类 {属性名: 属性值}
 ```
 
 CSS 类也可与伪类搭配使用
@@ -199,6 +223,8 @@ CSS 类也可与伪类搭配使用
 selector.class : pseudo-class {property: value}
 ```
 
+例子：
+
 ```css
 a:link {color: #FF0000}		/* 未访问的链接 */
 a:visited {color: #00FF00}	/* 已访问的链接 */
@@ -206,9 +232,35 @@ a:hover {color: #FF00FF}	/* 鼠标移动到链接上 */
 a:active {color: #0000FF}	/* 选定的链接 */
 ```
 
+```css
+body:hover {backgroud-color: #000}/*当鼠标移动到body上改变背景颜色*/
+```
+
 
 
 ## 伪元素选择器
+
+CSS 伪元素用于向某些选择器设置特殊效果
+
+语法：
+
+```css
+选择器:伪元素 {属性:属性值;}
+```
+
+例子：在每个 <h1> 元素后面插入一幅图片
+
+```css
+h1 : after
+{
+  content:url(logo.gif);
+}
+```
+
+* :first-letter 向文本的第一个字母添加特殊样式
+* :first-line 向文本的首行添加特殊样式
+* :before 在元素之前添加内容
+* :after 在元素之后添加内容
 
 ## 通配符选择器(universal selector)
 
@@ -224,7 +276,15 @@ a:active {color: #0000FF}	/* 选定的链接 */
 
 ## 选择器分组
 
-当几个选择器都拥有同样的属性，就可以使用选择器分组，选择器之间用逗号(,)分隔
+当几个选择器都拥有同样的属性，就可以使用选择器分组，选择器之间用逗号'**,**'分隔
+
+语法：
+
+```css
+选择器,选择器.... {属性名: 属性值}
+```
+
+例子:
 
 ```css
 h2, p {color:gray;}
