--- a/C/编译预处理和宏/编译预处理和宏.md
+++ b/C/编译预处理和宏/编译预处理和宏.md
@@ -4,3 +4,140 @@
 2. 编译：检查语法，同时将预处理后的文件编译生成汇编文件
 3. 汇编：将汇编文件生成目标文件（二进制文件）
 4. 链接：把需要的依赖库链接到最终的可执行文件中
+
+
+
+## 预处理器
+
+1. 预处理器不是编译器的组成部分，但是它是编译过程中一个单独的步骤
+2. 所有的预处理器命令都是以井号（#）开头
+3. 简言之，C 预处理器只不过是一个文本替换工具而已，它们会指示编译器在实际编译之前完成所需的预处理
+4. 不使用分号（;）结尾
+
+| 指令     | 描述                                                        |
+| -------- | ----------------------------------------------------------- |
+| #define  | 定义宏                                                      |
+| #include | 包含一个源代码文件                                          |
+| #undef   | 取消已定义的宏                                              |
+| #ifdef   | 如果宏已经定义，则返回真                                    |
+| #ifndef  | 如果宏没有定义，则返回真                                    |
+| #if      | 如果给定条件为真，则编译下面代码                            |
+| #else    | #if 的替代方案                                              |
+| #elif    | 如果前面的 #if 给定条件不为真，当前条件为真，则编译下面代码 |
+| #endif   | 结束一个 #if……#else 条件编译块                              |
+| #error   | 当遇到标准错误时，输出错误消息                              |
+| #pragma  | 使用标准化方法，向编译器发布特殊的命令到编译器中            |
+
+
+
+## 预定义宏
+
+ANSI C 定义了许多宏。在编程中您可以使用这些宏，但是不能直接修改这些预定义的宏。
+
+| 宏       | 描述                                                |
+| -------- | --------------------------------------------------- |
+| __DATE__ | 当前日期，一个以 "MMM DD YYYY" 格式表示的字符常量。 |
+| _TIME_ | 当前时间，一个以 "HH:MM:SS" 格式表示的字符常量。    |
+| _FILE_ | 这会包含当前文件名，一个字符串常量。                |
+| _LINE_ | 这会包含当前行号，一个十进制常量。                  |
+| _STDC_ | 当编译器以 ANSI 标准编译时，则定义为 1。            |
+
+```c
+#include <stdio.h>
+
+int main(int argc, char const *argv[])
+{
+    
+    printf("File :%s\n", __FILE__ );//File :preprocessor_macro.c
+    printf("Date :%s\n", __DATE__ );//Date :Sep 26 2018
+    printf("Time :%s\n", __TIME__ );//Time :11:24:59
+    printf("Line :%d\n", __LINE__ );//Line :9
+    printf("ANSI :%d\n", __STDC__ );//ANSI :1
+
+    return 0;
+}
+```
+
+
+
+## 预处理器运算符
+
+1. 宏延续运算符（\）
+2. 字符串常量化运算符（#）
+3. 标记粘贴运算符（##）
+4. defined() 运算符
+
+### 1.宏延续运算符
+
+一个宏通常写在一个单行上。但是如果宏太长，一个单行容纳不下，则使用宏延续运算符（\）
+
+```c
+#define  message_for(a, b)  \
+    printf(#a " and " #b ": We love you!\n")
+```
+
+### 2.字符串常量化运算符
+
+在宏定义中，当需要把一个宏的参数转换为字符串常量时，则使用字符串常量化运算符（#）
+
+### 3.标记粘贴运算符
+
+宏定义内的标记粘贴运算符（##）会合并两个参数。它允许在宏定义中两个独立的标记被合并为一个标记。
+
+```c
+#include <stdio.h>
+
+#define tokenpaster(n) printf ("token" #n " = %d", token##n)
+
+int main(void)
+{
+   int token34 = 40;
+   
+   tokenpaster(34);//token34 = 40
+   return 0;
+}
+```
+
+因为宏定义其实就是文本替换
+
+```c
+printf ("token34 = %d", token34);
+```
+
+### 4.defined() 运算符
+
+预处理器 **defined** 运算符是用在常量表达式中的，用来确定一个标识符是否已经使用 #define 定义过。
+
+如果指定的标识符已定义，则值为真（非零）。如果指定的标识符未定义，则值为假（零）。
+
+```c
+#include <stdio.h>
+
+#if !defined (MESSAGE)
+   #define MESSAGE "You wish!"
+#endif
+
+int main(void)
+{
+   printf("Here is the message: %s\n", MESSAGE);  //Here is the message: You wish!
+   return 0;
+}
+```
+
+## 参数化的宏
+
+预处理器一个强大的功能是可以使用参数化的宏来模拟函数
+
+宏名称和左圆括号之间不允许有空格
+
+```c
+#include <stdio.h>
+
+#define MAX(x,y) ((x) > (y) ? (x) : (y))
+
+int main(void)
+{
+   printf("Max between 20 and 10 is %d\n", MAX(10, 20));  
+   return 0;
+}
+```
