--- a/C/指针/指针.md
+++ b/C/指针/指针.md
@@ -1,4 +1,3 @@
-## 指针
 
 指针是存储其他变量地址的变量
 
@@ -25,3 +24,8 @@
 **指针名**输出的是指向变量的内存地址，***指针名**输出的指向变量存储的值
 
 内存中每个字节都有唯一的地址，因此，多字节变量实际占用了多个地址，变量的地址是它占用字节的首地址（最低位的地址）
+
+
+
+## 函数指针
+
