--- a/C/指针-*/指针.md
+++ b/C/指针-*/指针.md
@@ -1,7 +1,7 @@
 
 指针是存储其他变量地址的变量
 
-* 声明指针
+## 声明指针
 
 ```c
 类型名 *指针名;
@@ -9,7 +9,7 @@
 
 **星号(*)**是间接运算符(indirection operator),表明指针名是一个指向类型名类型的指针，不是类型名类型的变量。
 
-* 初始化指针
+## 初始化指针
 
 ```c
 指针 = &变量;
@@ -25,7 +25,50 @@
 
 内存中每个字节都有唯一的地址，因此，多字节变量实际占用了多个地址，变量的地址是它占用字节的首地址（最低位的地址）
 
-
-
 ## 函数指针
+
+```c
+#include <stdio.h>
+
+void (*add)(int, int);
+
+void addImp(int x, int y)
+{
+    printf("sum == %d\n", x + y);
+}
+
+int main(int argc, char const *argv[])
+{
+    add = &addImp;
+    add(2, 3);
+    return 0;
+}
+```
+
+输出：
+
+```c
+sum == 5
+```
+
+## 空指针
+
+在变量声明的时候，如果没有确切的地址可以赋值，为指针变量赋一个 NULL 值是一个良好的编程习惯。
+
+赋为 NULL 值的指针被称为**空**指针。
+
+NULL 指针是一个定义在标准库中的值为零的常量。
+
+```c
+#include <stdio.h>
+
+int main(int argc, char const *argv[])
+{
+    int *pointNull = NULL;
+    printf("pointNull 的地址是 %p\n", pointNull);//pointNull 的地址是 0x0
+    return 0;
+}
+```
+
+## Void指针
 
