--- a/C/指针-*/指针.md
+++ b/C/指针-*/指针.md
@@ -72,3 +72,68 @@ int main(int argc, char const *argv[])
 
 ## Void指针
 
+void指针泛指为通用指针（generic pointer），即指向任意数据对象类型的指针。
+
+```c
+void *指针名；
+```
+
+void指针最常见的用途就是声明函数的参数。如果希望一个函数能处理不同类型的参数，便可将void指针作为函数的参数。
+
+要使用void指针必须使用**强制类型转换**
+
+```c
+(type *)指针名;
+```
+
+```c
+#include <stdio.h>
+
+void printVoid(void *value, int position)
+{
+    switch (position)
+    {
+    case 1:
+        printf("value == %d\n", *((int *)value));
+        break;
+    case 2:
+        printf("value == %ld\n", *((long *)value));
+        break;
+    case 3:
+        printf("value == %f\n", *((float *)value));
+        break;
+    }
+}
+
+int main(int argc, char const *argv[])
+{
+    int a = 10;
+    printVoid(&a, 1);
+    long b = 110;
+    printVoid(&b, 2);
+    float c = 3.14;
+    printVoid(&c, 3);
+    return 0;
+}
+```
+
+输出结果：
+
+> value == 10
+> value == 110
+> value == 3.140000
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
