--- a/C/4.输入和输出/输入和输出.md
+++ b/C/4.输入和输出/输入和输出.md
@@ -7,3 +7,143 @@
 
 
 ## 文件输入输出流
+
+### 打开文件
+
+使用 `fopen( )` 函数来创建一个新的文件或者打开一个已有的文件，这个调用会初始化类型 `FILE` 的一个结构对象，类型 **FILE** 包含了所有用来控制流的必要的信息。
+
+```c
+FILE *fopen( const char * filename, const char * mode );
+```
+
+`filename`是一个字符指针，用来定义文件名。
+
+`mode`是文件的访问模式。
+
+| 模式 | 描述                                                         |
+| ---- | ------------------------------------------------------------ |
+| r    | 打开一个已有的文本文件，允许读取文件。                       |
+| w    | 打开一个文本文件，允许写入文件。如果文件不存在，则会创建一个新文件。如果文件存在，则该会被截断为零长度，重新写入。 |
+| a    | 打开一个文本文件，如果文件存在，以追加模式写入文件。如果文件不存在，则会创建一个新文件。 |
+| r+   | 打开一个文本文件，允许读写文件。                             |
+| w+   | 打开一个文本文件，允许读写文件。如果文件已存在，则文件会被截断为零长度，如果文件不存在，则会创建一个新文件。 |
+| a+   | 打开一个文本文件，允许读写文件。如果文件不存在，则会创建一个新文件。读取会从文件的开头开始，写入则只能是追加模式。 |
+
+如果处理的是二进制文件，则需使用下面的访问模式来取代上面的访问模式：
+
+```c
+"rb", "wb", "ab", "rb+", "r+b", "wb+", "w+b", "ab+", "a+b"
+```
+
+### 写入文件
+
+**写入字符：**
+
+```c
+int fputc( int c, FILE *fp );
+```
+
+* 函数 **fputc()** 把参数 c 的字符值写入到 fp 所指向的输出流中。
+
+* 如果写入成功，它会返回写入的字符，如果发生错误，则会返回 **EOF**。
+
+**写入字符串：**
+
+```c
+int fputs( const char *s, FILE *fp );
+```
+
+* 函数 **fputs()** 把字符串 **s** 写入到 fp 所指向的输出流中。
+
+* 如果写入成功，它会返回一个非负值，如果发生错误，则会返回 **EOF**。
+
+* 也可以使用 **int fprintf(FILE \*fp,const char *format, ...)** 函数来写把一个字符串写入到文件中。
+
+### 读取文件
+
+**读取字符：**
+
+```c
+int fgetc( FILE * fp );
+```
+
+* **fgetc()** 函数从 fp 所指向的输入文件中读取一个字符。
+
+* 返回值是读取的字符，如果发生错误则返回 **EOF**。
+
+**读取字符串：**
+
+```c
+char *fgets( char *buf, int n, FILE *fp );
+```
+
+* 函数 **fgets()** 从 fp 所指向的输入流中读取 n - 1 个字符。
+* 它会把读取的字符串复制到缓冲区 **buf**，并在最后追加一个 **null** 字符来终止字符串。
+* 如果这个函数在读取最后一个字符之前就遇到一个换行符 '\n' 或文件的末尾 EOF，则只会返回读取到的字符，包括换行符。
+* 也可以使用 **int fscanf(FILE \*fp, const char *format, ...)** 函数来从文件中读取字符串，但是在遇到第一个空格字符时，它会停止读取。
+
+### 关闭文件
+
+```c
+ int fclose( FILE *fp );
+```
+
+如果成功关闭文件，**fclose( )** 函数返回**零**，如果关闭文件时发生错误，函数返回 **EOF**。
+
+这个函数实际上，会清空缓冲区中的数据，关闭文件，并释放用于该文件的所有内存。
+
+`EOF` 是一个定义在头文件 **stdio.h** 中的常量。
+
+### 例子：
+
+```c
+#include <stdio.h>
+#include <stdlib.h>
+
+int main(int argc, char const *argv[])
+{
+    FILE *file;
+    //打开文件
+    file = fopen("hello.txt", "w+");
+    //写入文件
+    int result = fputc('a', file);
+    if (result != EOF)
+    {
+        printf("写入字符成功 result == %d\n", result);
+    }
+    result = fputs("hello world", file);
+    if (result != EOF)
+    {
+        printf("写入字符串成功 result == %d\n", result);
+    }
+    //关闭文件
+    fclose(file);
+    return 0;
+}
+
+```
+
+```c
+#include <stdio.h>
+#include <stdlib.h>
+
+int main(int argc, char const *argv[])
+{
+    FILE *file;
+    //打开文件
+    file = fopen("hello.txt", "r");
+    //读取文件
+    int result = fgetc(file);
+    if (result != EOF)
+    {
+        printf("读取字符成功 result == %d\n", result);
+    }
+    char buffer[255];
+    fgets(buffer, 255, (FILE*)file);
+    printf("rc == %s\n", buffer);
+    //关闭文件
+    fclose(file);
+    return 0;
+}
+```
+
