C-标准输入输出

--- a/C/4.输入和输出/输入和输出.md
+++ b/C/4.输入和输出/输入和输出.md
@@ -1,5 +1,90 @@
 ## 标准输入输出流
 
+C 语言把所有的设备都当作文件。文件指针是访问文件的方式。
+
+| 标准文件 | 文件指针 | 设备     |
+| -------- | -------- | -------- |
+| 标准输入 | stdin    | 键盘     |
+| 标准输出 | stdout   | 屏幕     |
+| 标准错误 | stderr   | 您的屏幕 |
+
+### scanf() 和 printf()函数
+
+C 语言中的 I/O (输入/输出) 通常使用 printf() 和 scanf() 两个函数。
+
+scanf() 函数用于从标准输入（键盘）读取并格式化， printf() 函数发送格式化输出到标准输出（屏幕）。
+
+```c
+#include <stdio.h>
+int main()
+{
+    float f;
+    printf("Enter a number: ");
+    // %f 匹配浮点型数据
+    scanf("%f",&f);
+    printf("Value = %f", f);
+    return 0;
+}
+```
+
+### getchar() 和 putchar() 函数
+
+**int getchar(void)** 函数从屏幕读取下一个可用的字符，并把它返回为一个整数。这个函数在同一个时间内只会读取一个单一的字符。您可以在循环内使用这个方法，以便从屏幕上读取多个字符。
+
+**int putchar(int c)** 函数把字符输出到屏幕上，并返回相同的字符。这个函数在同一个时间内只会输出一个单一的字符。您可以在循环内使用这个方法，以便在屏幕上输出多个字符。
+
+```c
+#include <stdio.h>
+ 
+int main( )
+{
+   int c;
+ 
+   printf( "Enter a value :");
+   c = getchar( );
+ 
+   printf( "\nYou entered: ");
+   putchar( c );
+   printf( "\n");
+   return 0;
+}
+```
+
+当上面的代码被编译和执行时，它会等待您输入一些文本，当您输入一个文本并按下回车键时，程序会继续并只会读取一个单一的字符，显示如下：
+
+
+> $./a.out
+> Enter a value :runoob
+>
+> You entered: r
+
+### gets() 和 puts() 函数
+
+**char \*gets(char *s)** 函数从 **stdin** 读取一行到 **s** 所指向的缓冲区，直到一个终止符或 EOF。
+
+**int puts(const char \*s)** 函数把字符串 s 和一个尾随的换行符写入到 **stdout**。
+
+```c
+#include <stdio.h>
+ 
+int main( )
+{
+   char str[100];
+ 
+   printf( "Enter a value :");
+   gets( str );
+ 
+   printf( "\nYou entered: ");
+   puts( str );
+   return 0;
+}
+```
+
+当上面的代码被编译和执行时，它会等待您输入一些文本，当您输入一个文本并按下回车键时，程序会继续并读取一整行直到该行结束，显示如下：
+
+> $./a.out
+> Enter a value :runoob
+> You entered: runoob
 
 
 ## 格式化输出
