C-结构增加函数

--- a/C/结构-struct/结构.md
+++ b/C/结构-struct/结构.md
@@ -1,4 +1,4 @@
-## 定义结构
+## 1、定义结构
 
 ```c
 struct Preson{
@@ -16,7 +16,7 @@ int main()
 
 * 结构体括号结尾要带上分号`;`
 
-## 使用typedef简写结构
+### 1.1、使用typedef简写结构
 
 ```c
 typedef struct
@@ -40,7 +40,7 @@ int main()
 }
 ```
 
-## 结构指针
+## 2、结构指针
 
 ```c
 #include <stdio.h>
@@ -67,7 +67,7 @@ int main(int argc, char const *argv[])
 > zhang san
 > li si
 
-## 结构作为函数参数
+## 3、结构作为函数参数
 
 1. 直接传递结构体给函数
 
@@ -129,7 +129,7 @@ void fun2(Person *p)
 > start -- zhang san
 > end --li si
 
-## 结构体长度
+## 4、结构体长度
 
 结构体的长度一般为结构中字段长度的总和。
 
@@ -152,7 +152,7 @@ int main(int argc, char const *argv[])
 
 > 4
 
-## const 的结构指针
+## 5、const 的结构指针
 
 const后的指针不能修改所指向地址的值，结构指针也是一样。但是可以重新指向其他的地址。
 
@@ -176,3 +176,34 @@ int main(int argc, char const *argv[])
 }
 ```
 
+## 6、给结构体增加函数
+
+```c
+#include <stdio.h>
+
+typedef struct
+{
+    void (*eat)();
+} Person;
+
+void eat()
+{
+    printf("%s\n", "每次多吃一粒米");
+}
+
+int main(int argc, char const *argv[])
+{
+    Person p;
+    p.eat = &eat;
+    p.eat();
+    
+    //指针方式
+    // Person *p1;
+    // p1 = &p;
+    // p1->eat = &eat;
+    // p1->eat();
+    return 0;
+}
+```
+
+> 每次多吃一粒米
