--- a/C/指针-*/指针.md
+++ b/C/指针-*/指针.md
@@ -1,21 +1,30 @@
 
 指针是存储其他变量地址的变量
 
-## 声明指针
+## 1、声明指针
 
 ```c
 类型名 *指针名;
 ```
 
-**星号(*)**是间接运算符(indirection operator),表明指针名是一个指向类型名类型的指针，不是类型名类型的变量。
+`星号(*)`是间接运算符(indirection operator),表明指针名是一个指向类型名类型的指针，不是类型名类型的变量。
 
-## 初始化指针
+```c
+int *a;
+```
+
+## 2、初始化指针
 
 ```c
 指针 = &变量;
 ```
 
-**取址运算符(&)**获取变量的内存地址，并将其放入指针变量中。
+```c
+int b = 10;
+a = &b;
+```
+
+取址运算符(&)**获取变量的内存地址，并将其放入指针变量中。
 
 通过变量名访问变量的内容，称之为**直接访问(direct access)**
 
@@ -25,7 +34,7 @@
 
 内存中每个字节都有唯一的地址，因此，多字节变量实际占用了多个地址，变量的地址是它占用字节的首地址（最低位的地址）
 
-## 函数指针
+## 3、函数指针
 
 ```c
 #include <stdio.h>
@@ -51,7 +60,7 @@ int main(int argc, char const *argv[])
 sum == 5
 ```
 
-## 空指针
+## 4、空指针
 
 在变量声明的时候，如果没有确切的地址可以赋值，为指针变量赋一个 NULL 值是一个良好的编程习惯。
 
@@ -70,7 +79,7 @@ int main(int argc, char const *argv[])
 }
 ```
 
-## Void指针
+## 5、Void指针
 
 void指针泛指为通用指针（generic pointer），即指向任意数据对象类型的指针。
 
