Shell-输入输出，文件包含

--- a/Shell/3.变量/变量.md
+++ b/Shell/3.变量/变量.md
@@ -1,5 +1,11 @@
 # 变量
 
+## 变量类型
+
+1. 局部变量： 局部变量在脚本或命令中定义，仅在当前shell实例中有效，其他shell启动的程序不能访问局部变量。
+2. 环境变量：所有的程序，包括shell启动的程序，都能访问环境变量，有些程序需要环境变量来保证其正常运行。必要的时候shell脚本也可以定义环境变量。
+3. shell变量：shell变量是由shell程序设置的特殊变量。shell变量中有一部分是环境变量，有一部分是局部变量，这些变量保证了shell的正常运行
+
 ## 定义变量
 
 ```shell
@@ -41,11 +47,7 @@ readonly 变量名
 unset 变量名
 ```
 
-## 变量类型
 
-1. 局部变量： 局部变量在脚本或命令中定义，仅在当前shell实例中有效，其他shell启动的程序不能访问局部变量。
-2. 环境变量：所有的程序，包括shell启动的程序，都能访问环境变量，有些程序需要环境变量来保证其正常运行。必要的时候shell脚本也可以定义环境变量。
-3. shell变量：shell变量是由shell程序设置的特殊变量。shell变量中有一部分是环境变量，有一部分是局部变量，这些变量保证了shell的正常运行
 
 ```shell
 #!/bin/bash
@@ -64,3 +66,6 @@ c=4
 > b
 > 3
 > ./var.sh: line 10: c: readonly variable
+
+## 系统变量
+
