--- a/Shell/3.变量/变量.md
+++ b/Shell/3.变量/变量.md
@@ -69,3 +69,33 @@ c=4
 
 ## 系统变量
 
+### 常用系统变量
+
+`$HOME`、`$PWD`、`$SHELL`、`$USER`等
+
+```shell
+#!/bin/bash
+
+echo $HOME
+echo $PWD
+echo $SHELL
+echo $USER
+```
+
+> /Users/simple
+> /Users/simple/Desktop/WorkSpace/KeepLearning/Shell/3.变量
+> /bin/zsh
+> simple
+
+### 显示当前Shell中的所有变量：`set`
+
+```shell
+$ set
+'!'=0
+'#'=0
+'$'=1104
+'*'=(  )
+-=569JNRXZghiklms
+0=-zsh
+```
+
