--- a/iOS/Objective-C/方法.md
+++ b/iOS/Objective-C/方法.md
@@ -34,12 +34,12 @@
 
 ```objc
 @implementation Person
-{
-    - (void)run
-    {
-        ...
-    }
-}
+
+   - (void)run
+   {
+       ...
+   }
+
 @end
 ```
 
@@ -83,9 +83,7 @@ Person *p = [Person new];
 
 ```objc
 @implementtion Person
-{
-    
-}
+
 -(void)eat:(NSString *)foodName
 {
     
@@ -133,9 +131,7 @@ Person *p = [Person new];
 
 ```objc
 @implementation Person
-{
-    
-}
+
 - (int)sum:(int)num1 :(int)num2 
 {
     return num1 + num2;
@@ -169,7 +165,24 @@ int main
 }
 ```
 
+## 在方法的实现中可以直接访问对象的属性
 
+```objc
+@interface Person : NSObject
+{
+    @public
+    NSString *_name;
+}
+
+- (void)printName;
+
+@implementation Person
+
+- (void)printName
+{
+    NSLog("name == %@",_name);
+}
+```
 
 
 
