--- a/Shell/3.变量/变量.md
+++ b/Shell/3.变量/变量.md
@@ -99,3 +99,23 @@ $ set
 0=-zsh
 ```
 
+## 特殊变量
+
+### $n
+
+描述：n为数字，`$0`代表该脚本名称，`$1-$9`代表第一到第九个参数，十以上的参数需要用大括号包含，`${10}`
+
+### $#
+
+描述：获取所有输入参数的个数，常用于循环。
+
+### `$*`,`$@`
+
+`$*`：这个变量代表命令行中所有的参数，`$*`把所有参数看成一个整体。
+
+`$@`：这个变量也代表命令行中所有的参数，`$@`把每个参数区分对待。
+
+### $?
+
+描述：最后一次执行的命令的返回状态，如果这个变量的值为0，证明上一次命令正确执行。如果这个变量的值为非0（具体是哪个数，由命令自己来决定），则证明上一个命令执行不正确了。
+
