--- a/Shell/6.运算符/运算符.md
+++ b/Shell/6.运算符/运算符.md
@@ -25,7 +25,12 @@ echo "value = ${value}"
 
 表达式和运算符之间是有空格的。
 
-## 算符运算符
+## 算术运算符
+
+### 基本语法
+
+1. `$((运算式)) `或 `$[运算式]`
+2. `expr`表达式
 
 假设a=10，b=20
 
@@ -85,16 +90,20 @@ echo "a = $b"
 
 关系运算符只支持数字，不支持字符串，除非字符串的值是数字。
 
+语法：[ 表达式 ]
+
+注意：表达式前后有空格
+
 假设a=10，b=20
 
 | 运算符 | 说明                                                  | 举例                          |
 | ------ | ----------------------------------------------------- | ----------------------------- |
-| -eq    | 检测两个数是否相等，相等返回 true。                   | `[ $a -eq $b ] ` 返回 false。 |
-| -ne    | 检测两个数是否不相等，不相等返回 true。               | `[ $a -ne $b ]`  返回 true。      |
-| -gt    | 检测左边的数是否大于右边的，如果是，则返回 true。     | `[ $a -gt $b  ]` 返回 false。  |
-| -lt    | 检测左边的数是否小于右边的，如果是，则返回 true。     | ` $a -lt $b ` 返回 true。     |
-| -ge    | 检测左边的数是否大于等于右边的，如果是，则返回 true。 | ` $a -ge $b ` 返回 false。    |
-| -le    | 检测左边的数是否小于等于右边的，如果是，则返回 true。 | ` $a -le $b ` 返回 true。     |
+| -eq    | (equal)检测两个数是否`相等`，相等返回 true。       | `[ $a -eq $b ] ` 返回 false。 |
+| -ne    | (not equal)检测两个数是否`不相等`，不相等返回 true。  | `[ $a -ne $b ]`  返回 true。      |
+| -gt    | (greater than)检测左边的数是否`大于`右边的，如果是，则返回 true。 | `[ $a -gt $b  ]` 返回 false。  |
+| -lt    | (less than)检测左边的数是否`小于`右边的，如果是，则返回 true。 | `[ $a -lt $b ] ` 返回 true。 |
+| -ge    | (greater equal)检测左边的数是否`大于等于`右边的，如果是，则返回 true。 | `[ $a -ge $b ]` 返回 false。 |
+| -le    | (less equal)检测左边的数是否`小于等于`右边的，如果是，则返回 true。 | `[ $a -le $b ]` 返回 true。   |
 
 **注意：**
 
