--- a/Shell/8.函数/函数.md
+++ b/Shell/8.函数/函数.md
@@ -121,3 +121,35 @@ fun_arg 1 2 3 4 5
 | $@       | 与$*相同，但是使用时加引号，并在引号中返回每个参数。         |
 | $-       | 显示Shell使用的当前选项，与set命令功能相同。                 |
 | $?       | 显示最后命令的退出状态。0表示没有错误，其他任何值表明有错误。 |
+
+## 系统函数
+
+### basename函数
+
+语法：basename \[string/ pathname] [suffix]
+
+描述：basename命令会删除所有的前缀包括最好一个`/`字符，然后将字符串显示出来
+
+选项：suffix为后缀，如果suffix被指定，basename会将pathname或string中的suffix去掉。
+
+```shell
+basename /home/shell.txt
+basename /home/shell.txt .txt
+```
+
+> shell.txt
+>
+> shell
+
+### dirname函数
+
+语法：dirname 文件绝对路径
+
+描述：从给定的包含绝对路径的文件名中去除文件名（非目录部分），然后返回剩下的路径（目录的部分）
+
+```shell
+dirname /home/simple/shell.txt
+```
+
+> /home/simple
+
