update:1.FFmpeg交叉编译Android可用的动态so库

--- a/Android/FFmpeg/1.FFmpeg交叉编译Android可用的动态so库.md
+++ b/Android/FFmpeg/1.FFmpeg交叉编译Android可用的动态so库.md
@@ -195,3 +195,7 @@ public class MainActivity extends AppCompatActivity {
 > 输出结果：
 >
 > demo.simple.example_ffmpeg D/MainActivity: ffmpeg version == 4.0.5
+
+## 源码地址
+
+https://github.com/simplepeng/AndroidExamples/tree/master/example_ffmpeg
