--- a/Android/FFmpeg/1.FFmpeg交叉编译Android可用的动态so库.md
+++ b/Android/FFmpeg/1.FFmpeg交叉编译Android可用的动态so库.md
@@ -1,55 +1,100 @@
-# FFmpeg交叉编译Android可用的动态so库
+# FFmpeg编译成so库
 
 ## 环境
 
 * macOS High Sierra
-* FFmpeg 4.0.5
-* android-ndk-r16b
+* FFmpeg 4.3
+* android-ndk-r21b
 
-下载FFmpeg 4.0.5源代码，进入源码目录创建`build_android.sh`脚本
+## 编译so库
+
+下载FFmpeg4.3源代码，进入源码目录创建`build_android.sh`脚本，ffmpeg从4.0起新增了`target-os=android`，所以不用再修改`configure`文件。
+
+**注意：**
+
+* `ndk-17`以前内置的编译器是`gcc`，而新版的ndk已经用`clang`替代了`gcc`编译器，所以使用`-cc`和`-cxx`指令时要特别注意自己要使用的编译器是`gcc`还是`clang`。
+
+* 还有个我遇到的问题就是在`ndk-r17c`和`ndk-18b`中的`toolchains/llvm/prebuilt/darwin-x86_64/bin`中的`clang`编译工具集不完整，我也不知道为啥会有这个问题。
+* 只有`armv7-a`的编译器执行文件中间有`eabi`结尾，其他没有。例：`armv7a-linux-androideabi21-clang`，`x86_64-linux-android21-clang`。如果报错`not found xxx file`的错误，就自行到相应目录查看。
 
 ```shell
 #!/bin/bash
-ADDI_CFLAGS="-marm"
-API=21
-PLATFORM=arm-linux-androideabi
-# 动态库的指令集
-CPU=armv7-a
-# 设置自己NDK的路径
-NDK=/Users/chenpeng/Desktop/work_space/ndk/android-ndk-r16b 
-SYSROOT=$NDK/platforms/android-$API/arch-arm/
-ISYSROOT=$NDK/sysroot
-ASM=$ISYSROOT/usr/include/$PLATFORM
-TOOLCHAIN=$NDK/toolchains/$PLATFORM-4.9/prebuilt/darwin-x86_64
-#指定一个输出目录，用来存放生成的头文件，动态库等
-OUTPUT=/Users/chenpeng/Desktop/work_space/FFmpeg/out 
-function build
-{
-./configure \
---prefix=$OUTPUT \
---enable-shared \
---disable-static \
---disable-doc \
---disable-ffmpeg \
---disable-ffplay \
---disable-ffprobe \
---disable-avdevice \
---disable-doc \
---disable-symver \
---cross-prefix=$TOOLCHAIN/bin/arm-linux-androideabi- \
---target-os=android \
---arch=arm \
---enable-cross-compile \
---sysroot=$SYSROOT \
---extra-cflags="-I$ASM -isysroot $ISYSROOT -Os -fpic -marm" \
---extra-ldflags="-marm" \
-$ADDITIONAL_CONFIGURE_FLAG
-  make clean
-  make -j4
-  make install
-}
 
-build
+# ndk路径
+NDK=/Users/chenpeng/Desktop/work_space/ndk/android-ndk-r21b
+# 编译工具链目录，ndk17版本以上用的是clang，以下是gcc
+TOOLCHAIN=$NDK/toolchains/llvm/prebuilt/darwin-x86_64
+# 版本号
+API=21
+# 交叉编译树的根目录(查找相应头文件和库用)
+SYSROOT="${TOOLCHAIN}/sysroot"
+
+# armv7-a
+OUTPUT_FOLDER="armeabi-v7a"
+ARCH="arm"
+CPU="armv7-a"
+TOOL_CPU_NAME=armv7a
+TOOL_PREFIX="$TOOLCHAIN/bin/${TOOL_CPU_NAME}-linux-androideabi"
+OPTIMIZE_CFLAGS="-march=$CPU"
+
+# arm64-v8a，这个指令集最低支持api21
+# OUTPUT_FOLDER="arm64-v8a"
+# ARCH="aarch64"
+# CPU="armv8-a"
+# TOOL_CPU_NAME=aarch64
+# TOOL_PREFIX="$TOOLCHAIN/bin/${TOOL_CPU_NAME}-linux-android"
+# OPTIMIZE_CFLAGS="-march=$CPU"
+
+# x86
+# OUTPUT_FOLDER="x86"
+# ARCH="x86"
+# CPU="x86"
+# TOOL_CPU_NAME="i686"
+# TOOL_PREFIX="$TOOLCHAIN/bin/${TOOL_CPU_NAME}-linux-android"
+# OPTIMIZE_CFLAGS="-march=i686 -mtune=intel -mssse3 -mfpmath=sse -m32"
+
+# x86_64，这个指令集最低支持api21
+# OUTPUT_FOLDER="x86_64"
+# ARCH="x86_64"
+# CPU="x86_64"
+# TOOL_CPU_NAME="x86_64"
+# TOOL_PREFIX="$TOOLCHAIN/bin/${TOOL_CPU_NAME}-linux-android"
+# OPTIMIZE_CFLAGS="-march=$CPU"
+
+# 输出目录
+PREFIX="${PWD}/android/$OUTPUT_FOLDER"
+# so的输出目录， --libdir=$LIB_DIR 可以不用指定，默认会生成在$PREFIX/lib目录中
+#LIB_DIR="${PWD}/android/libs/$OUTPUT_FOLDER"
+# 编译器
+CC="${TOOL_PREFIX}${API}-clang"
+CXX="${TOOL_PREFIX}${API}-clang++"
+
+# 定义执行configure的shell方法
+function build_android() {
+    ./configure \
+        --prefix=$PREFIX \
+        --enable-shared \
+        --disable-static \
+        --enable-jni \
+        --disable-doc \
+        --disable-programs \
+        --disable-symver \
+        --target-os=android \
+        --arch=$ARCH \
+        --cpu=$CPU \
+        --cc=$CC \
+        --cxx=$CXX \
+        --enable-cross-compile \
+        --sysroot=$SYSROOT \
+        --extra-cflags="-Os -fpic $OPTIMIZE_CFLAGS" \
+        --extra-ldflags="" \
+        --disable-asm \
+        $COMMON_FF_CFG_FLAGS
+    make clean
+    make -j8
+    make install
+}
+build_android
 ```
 
 更多构建参数可以使用`./configure -h`参看
@@ -59,20 +104,21 @@ shell脚本语言不熟的可以查看我的[shell学习笔记](https://github.c
 执行`build_android.sh`脚本，等待脚本执行完成，执行过程可能会遇到缺少组件的问题，按需解决。
 
 ```shell
+# 如遇到permission denied，请chmod 777 xx.sh
 sh build_android.sh
 ```
 
 生成文件目录如下：
 
-![生成文件](../images/ffmpeg_1_1.png)
+![](https://raw.githubusercontent.com/simplepeng/ImageRepo/master/android/ffmpeg_1_1.png)
 
 ## 创建一个新的Android Cmake项目
 
 将动态库放入`libs/armeabi-v7a`文件夹，将头文件方法`cpp`目录
 
-![](../images/ffmpeg_1_2.png)
+![](https://raw.githubusercontent.com/simplepeng/ImageRepo/master/android/ffmpeg_1_2.png)
 
-新增`FFmpegUtils.cpp`jni类，配置`build.gradle`，配置`CMakeLists.txt`
+新增`ffmpeg_utils.cpp`类，配置`build.gradle`，配置`CMakeLists.txt`
 
 ```c++
 #include <jni.h>
@@ -133,10 +179,13 @@ android {
 # 设置构建本机库文件所需的 CMake的最小版本
 cmake_minimum_required(VERSION 3.4.1)
 
+#添加头文件的搜索路径
+include_directories(src/main/cpp/include/)
+
 # 添加自己写的 C/C++源文件
 add_library(utils #so名称
         SHARED #动态库
-        src/main/cpp/FFmpegUtils.cpp
+        src/main/cpp/ffmpeg_utils.cpp
         )
 
 # 添加外部的库(可以是动态库或静态库)
@@ -149,10 +198,6 @@ set_target_properties(
         avutil
         PROPERTIES IMPORTED_LOCATION
         ${LIBS_DIR}/libavutil.so)
-
-
-#添加头文件的搜索路径
-include_directories(src/main/cpp/include/)
 
 #  依赖 NDK中自带的log库
 find_library(log-lib log)
@@ -194,8 +239,33 @@ public class MainActivity extends AppCompatActivity {
 
 > 输出结果：
 >
-> demo.simple.example_ffmpeg D/MainActivity: ffmpeg version == 4.0.5
+> ffmpeg version == 4.3
+
+## 简写导入动态库的cmake语句
+
+上面`CmakeList`引入`avutil`使用了`add_library`和`set_target_properties`，如果同时引用很多动态库，那就要写很多的重复配置，我们完全可以使用下面的方式简写配置。或者也可以将所有动态库合并成一个动态库。
+
+```cmake
+#设置查找动态库位置
+set(LINK_DIR ${CMAKE_SOURCE_DIR}/libs/${CMAKE_ANDROID_ARCH_ABI})
+link_directories(${LINK_DIR})
+#找到所有的so库，存放在全局变量SO_DIR中
+file(GLOB SO_DIR ${LINK_DIR}/*.so)
+
+#  链接库
+target_link_libraries(
+        utils
+       ${SO_DIR}
+        ${log-lib})
+```
+
+## 合并成一个so库
+
+## 导入源码，封装可执行命令的工具类
 
 ## 源码地址
 
 https://github.com/simplepeng/AndroidExamples/tree/master/example_ffmpeg
+
+## 参考
+
