--- a/Android/FFmpeg/1.FFmpeg4.3编译动态库-Android+Cmake+ndk-r21b.md
+++ b/Android/FFmpeg/1.FFmpeg4.3编译动态库-Android+Cmake+ndk-r21b.md
@@ -14,8 +14,8 @@
 
 * `ndk-17`以前内置的编译器是`gcc`，而新版的ndk已经用`clang`替代了`gcc`编译器，所以使用`-cc`和`-cxx`指令时要特别注意自己要使用的编译器是`gcc`还是`clang`。
 
-* 还有个我遇到的问题就是在`ndk-r17c`和`ndk-18b`中的`toolchains/llvm/prebuilt/darwin-x86_64/bin`中的`clang`编译工具集不完整，我也不知道为啥会有这个问题。
-* 只有`armv7-a`的编译器执行文件中间有`eabi`结尾，其他没有。例：`armv7a-linux-androideabi21-clang`，`x86_64-linux-android21-clang`。如果报错`not found xxx file`的错误，就自行到相应目录查看。
+* 还有个我遇到的问题就是在`ndk-r17c`和`ndk-18b`中的`toolchains/llvm/prebuilt/darwin-x86_64/bin`中没有`clang`编译工具集，而是在上层目录中。
+* 只有`armv7-a`的执行文件中间有`eabi`结尾，其他没有。例：`armv7a-linux-androideabi21-clang`，`x86_64-linux-android21-clang`。如果报错`not found xxx file`的错误，就自行到相应目录查看。
 
 ```shell
 #!/bin/bash
@@ -188,7 +188,7 @@ add_library(utils #so名称
         src/main/cpp/ffmpeg_utils.cpp
         )
 
-# 添加外部的库(可以是动态库或静态库)
+# 添加外部的库(可以是动态库或静态库)，这里只引入了avutil
 set(LIBS_DIR ${CMAKE_SOURCE_DIR}/libs/${ANDROID_ABI})
 add_library(
         avutil
@@ -246,6 +246,8 @@ public class MainActivity extends AppCompatActivity {
 上面`CmakeList`引入`avutil`使用了`add_library`和`set_target_properties`，如果同时引用很多动态库，那就要写很多的重复配置，我们完全可以使用下面的方式简写配置。或者也可以将所有动态库合并成一个动态库。
 
 ```cmake
+# 去掉`add_library`和`set_target_properties`的相关配置
+
 #设置查找动态库位置
 set(LINK_DIR ${CMAKE_SOURCE_DIR}/libs/${CMAKE_ANDROID_ARCH_ABI})
 link_directories(${LINK_DIR})
@@ -259,13 +261,9 @@ target_link_libraries(
         ${log-lib})
 ```
 
-## 合并成一个so库
-
-## 导入源码，封装可执行命令的工具类
-
 ## 源码地址
 
 https://github.com/simplepeng/AndroidExamples/tree/master/example_ffmpeg
 
-## 参考
+
 
