update:2.FFmpeg获取视频首帧转封面图Bitmap.md

--- a/Android/FFmpeg/2.FFmpeg获取视频首帧转封面图Bitmap.md
+++ b/Android/FFmpeg/2.FFmpeg获取视频首帧转封面图Bitmap.md
@@ -68,6 +68,13 @@ Java_demo_simple_example_1ffmpeg_MainActivity_getCover(JNIEnv *env,
 
 `AVCodecParameters`结构体描述了被编码后的流的属性。
 
+谢谢大佬提点，这里找流的index其实可以使用`av_find_best_stream()`函数直接找到最合适的那个流index。
+
+```c++
+//找到最合适的流
+    int stream_index = av_find_best_stream(ifmt_ctx, AVMEDIA_TYPE_VIDEO, -1, -1, NULL, 0);
+```
+
 ## 找到解码器，申请编解码器上下文
 
 ```c++
@@ -191,11 +198,14 @@ Yuv420p转ARGB的函数名是`I420ToABGR`，并不是`I420ToARGB`。我坑，之
 ## Log输出和界面显示
 
 > demo.simple.example_ffmpeg D/MainActivity: bitmap width == 1080
+> 
 > demo.simple.example_ffmpeg D/MainActivity: bitmap height == 1920
+> 
 > demo.simple.example_ffmpeg D/MainActivity: bitmap config == ARGB_8888
+> 
 > demo.simple.example_ffmpeg D/MainActivity: bitmap byteCount == 8294400
 
-![](https://raw.githubusercontent.com/simplepeng/ImageRepo/master/android/image-20200706171406818.png)
+![界面实现](https://raw.githubusercontent.com/simplepeng/ImageRepo/master/android/image-20200706171406818.png)
 
 ## 完整代码
 
