update:3.编译Android下可执行命令的FFmpeg.md

--- a/Android/FFmpeg/3.编译Android下可执行命令的FFmpeg.md
+++ b/Android/FFmpeg/3.编译Android下可执行命令的FFmpeg.md
@@ -189,21 +189,23 @@ private void exeCmd() {
 
 查看日志输出
 
-> demo.simple.example_ffmpeg D/MainActivity: ffmpeg log ----- 
-> demo.simple.example_ffmpeg D/MainActivity: ffmpeg log -----   Total: 331 packets (1993540 bytes) demuxed
-> demo.simple.example_ffmpeg D/MainActivity: ffmpeg log ----- Output file #0 (/storage/emulated/0/video.flv):
-> demo.simple.example_ffmpeg D/MainActivity: ffmpeg log -----   Output stream #0:0 (video): 
-> demo.simple.example_ffmpeg D/MainActivity: ffmpeg log ----- 129 packets muxed (1822580 bytes); 
-> demo.simple.example_ffmpeg D/MainActivity: ffmpeg log ----- 
-> demo.simple.example_ffmpeg D/MainActivity: ffmpeg log -----   Output stream #0:1 (audio): 
-> demo.simple.example_ffmpeg D/MainActivity: ffmpeg log ----- 202 packets muxed (170960 bytes); 
-> demo.simple.example_ffmpeg D/MainActivity: ffmpeg log ----- 
-> demo.simple.example_ffmpeg D/MainActivity: ffmpeg log -----   Total: 331 packets (1993540 bytes) muxed
-> demo.simple.example_ffmpeg D/MainActivity: ffmpeg log ----- 0 frames successfully decoded, 0 decoding errors
-> demo.simple.example_ffmpeg D/MainActivity: ffmpeg log ----- [AVIOContext @ 0xda2ea480] Statistics: 2 seeks, 10 writeouts
-> demo.simple.example_ffmpeg D/MainActivity: ffmpeg log ----- [AVIOContext @ 0xda2ea3c0] Statistics: 2161643 bytes read, 1 seeks
-> demo.simple.example_ffmpeg D/MainActivity: ffmpeg log ----- 
-> demo.simple.example_ffmpeg D/MainActivity: exe cmd result == 0
+```shell
+demo.simple.example_ffmpeg D/MainActivity: ffmpeg log ----- 
+demo.simple.example_ffmpeg D/MainActivity: ffmpeg log -----   Total: 331 packets (1993540 bytes) demuxed
+demo.simple.example_ffmpeg D/MainActivity: ffmpeg log ----- Output file #0 (/storage/emulated/0/video.flv):
+demo.simple.example_ffmpeg D/MainActivity: ffmpeg log -----   Output stream #0:0 (video): 
+demo.simple.example_ffmpeg D/MainActivity: ffmpeg log ----- 129 packets muxed (1822580 bytes); 
+demo.simple.example_ffmpeg D/MainActivity: ffmpeg log ----- 
+demo.simple.example_ffmpeg D/MainActivity: ffmpeg log -----   Output stream #0:1 (audio): 
+demo.simple.example_ffmpeg D/MainActivity: ffmpeg log ----- 202 packets muxed (170960 bytes); 
+demo.simple.example_ffmpeg D/MainActivity: ffmpeg log ----- 
+demo.simple.example_ffmpeg D/MainActivity: ffmpeg log -----   Total: 331 packets (1993540 bytes) muxed
+demo.simple.example_ffmpeg D/MainActivity: ffmpeg log ----- 0 frames successfully decoded, 0 decoding errors
+demo.simple.example_ffmpeg D/MainActivity: ffmpeg log ----- [AVIOContext @ 0xda2ea480] Statistics: 2 seeks, 10 writeouts
+demo.simple.example_ffmpeg D/MainActivity: ffmpeg log ----- [AVIOContext @ 0xda2ea3c0] Statistics: 2161643 bytes read, 1 seeks
+demo.simple.example_ffmpeg D/MainActivity: ffmpeg log ----- 
+demo.simple.example_ffmpeg D/MainActivity: exe cmd result == 0
+```
 
 执行命令的返回值`==0`，并且也看到确实文件已经生成出来了，我们`adb pull`把文件导出到桌面用`ffprobe`或`ffplay`看看。
 
@@ -211,25 +213,27 @@ private void exeCmd() {
 ffprobe video.flv
 ```
 
-> ffprobe version 4.0.4 Copyright (c) 2007-2019 the FFmpeg developers
->   built with Apple LLVM version 10.0.0 (clang-1000.10.44.4)
->   configuration:
->   libavutil      56. 14.100 / 56. 14.100
->   libavcodec     58. 18.100 / 58. 18.100
->   libavformat    58. 12.100 / 58. 12.100
->   libavdevice    58.  3.100 / 58.  3.100
->   libavfilter     7. 16.100 /  7. 16.100
->   libswscale      5.  1.100 /  5.  1.100
->   libswresample   3.  1.100 /  3.  1.100
-> Input #0, flv, from 'video.flv':
->   Metadata:
->     major_brand     : mp42
->     minor_version   : 0
->     compatible_brands: mp42mp41
->     encoder         : Lavf58.45.100
->   Duration: 00:00:01.07, start: 0.033000, bitrate: 3130 kb/s
->     Stream #0:0: Video: h264 (Main), yuv420p(tv, bt709, progressive), 1080x1920, 3390 kb/s, 30 fps, 30 tbr, 1k tbn, 60 tbc
->     Stream #0:1: Audio: aac (LC), 48000 Hz, stereo, fltp, 317 kb/s
+```shell
+ffprobe version 4.0.4 Copyright (c) 2007-2019 the FFmpeg developers
+built with Apple LLVM version 10.0.0 (clang-1000.10.44.4)
+configuration:
+libavutil      56. 14.100 / 56. 14.100
+libavcodec     58. 18.100 / 58. 18.100
+libavformat    58. 12.100 / 58. 12.100
+libavdevice    58.  3.100 / 58.  3.100
+libavfilter     7. 16.100 /  7. 16.100
+libswscale      5.  1.100 /  5.  1.100
+libswresample   3.  1.100 /  3.  1.100
+Input #0, flv, from 'video.flv':
+Metadata:
+ major_brand     : mp42
+ minor_version   : 0
+ compatible_brands: mp42mp41
+ encoder         : Lavf58.45.100
+Duration: 00:00:01.07, start: 0.033000, bitrate: 3130 kb/s
+ Stream #0:0: Video: h264 (Main), yuv420p(tv, bt709, progressive), 1080x1920, 3390 kb/s, 30 fps, 30 tbr, 1k tbn, 60 tbc
+ Stream #0:1: Audio: aac (LC), 48000 Hz, stereo, fltp, 317 kb/s
+```
 
 可以看到确实裁剪生成了一个1秒的视频，虽然后缀名我们用的`.flv`，但是其实我们是拷贝的视频编码，所以还是`mp4`的封装格式。
 
