update:10大经典排序算法

--- a/数据结构和算法/算法/10大经典排序算法.md
+++ b/数据结构和算法/算法/10大经典排序算法.md
@@ -46,33 +46,20 @@ public class Utils {
 ![冒泡排序](img/bubble_sort.gif)
 
 ```java
-public class BubbleSort {
-
-    public static void main(String[] args) {
-        int[] arr = {4, 1, 87, 33, 66, 45, 99};
-        System.out.println(Arrays.toString(arr));
-        bubbleSort(arr);
-        System.out.println(Arrays.toString(arr));
-    }
-
-    public static void bubbleSort(int[] arr) {
+public static void bubbleSort(int[] arr) {
         int len = arr.length;
-        //循环次数为数组容量
+        // 循环次数为数组容量
         for (int i = 0; i < len; i++) {
-            //循环len-i次，因为完成一次循环，最大的元素就会被移动至末尾
+            // 循环len-i次，因为完成一次循环，最大的元素就会被移动至末尾
             for (int j = 0; j < len - i; j++) {
-                //比较当前位置和下一位谁大
+                // 比较当前位置和下一位谁大
                 if (j < len - 1 && arr[j] > arr[j + 1]) {
-                    //交互位置
-                    int tmp = arr[j + 1];
-                    arr[j + 1] = arr[j];
-                    arr[j] = tmp;
+                    // 交互位置
+                    swap(arr, j, j + 1);
                 }
             }
         }
     }
-
-}
 ```
 
 ## 2.快速排序
@@ -82,6 +69,8 @@ public class BubbleSort {
 1. 从数组或队列中选出一个元素，称之为`基准(pivot)`。
 2. 开始排序，比基准小的就放到基准的前面，比基准大得就放在基准的后面，相同的可以放在任意一边。一次分区完成后，基准就位于数列的中间。所以这个也称之为`分区(parttion)`操作。
 3. `递归的`把小于基准和大于基准的子数列排序，也就是进行上一步的操作。
+
+![](img/quick_sort.gif)
 
 ```java
 
@@ -97,7 +86,25 @@ public class BubbleSort {
 ![](img/insertion_sort.gif)
 
 ```java
+private static void insertionSort(int[] arr) {
+        int length = arr.length;
 
+        // 下标从1开始，因为0下标已经被当成有序序列
+        for (int i = 1; i < length; i++) {
+            int current = arr[i];//当前要插入的元素
+            int preIndex = i - 1;//未排序序列的index
+
+            // 如果未排序的元素大于当前要插入的元素，继续执行循环
+            // 并且preIndex的下标要不小于0
+            while (preIndex >= 0 && arr[preIndex] > current) {
+                arr[preIndex + 1] = arr[preIndex];// preIndex的元素后移一位
+                preIndex--;// 已排序序列下标减一，继续比较
+            }
+
+            // 当preIndex下标的元素不大于current时，就插入在preIndex后面
+            arr[preIndex + 1] = current;
+        }
+    }
 ```
 
 
@@ -113,15 +120,6 @@ public class BubbleSort {
 ![](img/selection_sort.gif)
 
 ```java
-public class SelectionSort {
-
-    public static void main(String[] args) {
-        int arr[] = { 1, 33, 22, 11, 66, 33,89, 75, 24 };
-        System.out.println(Arrays.toString(arr));
-        selectionSort(arr);
-        System.out.println(Arrays.toString(arr));
-    }
-
     private static void selectionSort(int[] arr) {
         int length = arr.length;
         int minIndex = 0;
@@ -133,10 +131,9 @@ public class SelectionSort {
                     minIndex = j;
                 }
             }
-            Utils.swap(arr, i, minIndex);
+            swap(arr, i, minIndex);
         }
     }
-}
 ```
 
 内层for循环遍历一次数列找出最小或最大的那个元素，外层for控制循环次数，保证每个元素都被比较到。
@@ -147,13 +144,15 @@ public class SelectionSort {
 
 ## 8.基数排序
 
-## 9.桶排序
+## 9.计数排序
 
-## 10. 计数排序
+## 10. 桶排序
 
 ## 参考文献
 
 https://www.runoob.com/w3cnote/ten-sorting-algorithm.html
 
 《大话数据结构》
+
+[源码](https://github.com/simplepeng/KeepLearningExample/tree/master/example_algorithm)
 
