--- a/英语/英语学习笔记.md
+++ b/英语/英语学习笔记.md
@@ -93,7 +93,7 @@ We made him our monitor
 * We like <u>her</u>
 * I like <u>him</u>
 
-### 名词性/形容词性-物主代词
+### 物主代词
 
 物主就是物的主人，代词就是代替名词，代替事物，代替人的名词叫做代词。
 
@@ -112,3 +112,49 @@ their=他们的
 
 #### 名词性物主代词
 
+物的主人要像名词一样去使用
+
+单数形式：`mine`,`yours`,`his/hers/its`,`ones`
+
+复数形式：`ours`,`yours`,`theirs`
+
+* The book is <u>ours</u>
+* The apple is <u>heres</u>
+
+### 总结
+
+| 主格代词 | 宾格代词 | 形容词性物主代词 | 名词性物主代词 |
+| :------: | :------: | :--------------: | :------------: |
+|    I     |    me    |        my        |      mine      |
+|    He    |   him    |       his        |      his       |
+|   She    |   her    |       her        |      hers      |
+|    It    |    it    |       its        |      its       |
+|   You    |   you    |       your       |     yours      |
+|    We    |    us    |       our        |      ours      |
+|   They   |   them   |      their       |     theirs     |
+
+### 反身代词
+
+`myself`,`yourself`,`herself`,`himself`,`itself`
+
+`yourselves`,`ourselves`,`themselves`
+
+## 实意动词
+
+具有实在意义的动词
+
+`come`,`read`,`go`,`watch`,`play`,`fly`
+
+## 助动词
+
+`do`,`does`,`did`
+
+否定形式：`don't`,`doesn't`,`didn't`
+
+## 疑问词
+
+`when`,`where`,`who`,`what`,`how`
+
+* when:什么时候
+* here:什么地点
+* who:什么人
